中间的快捷键能够做到除点击“取消”按钮，点击屏幕其他地方也可以取消

--- a/PocketUni/res/layout/dlg_share.xml
+++ b/PocketUni/res/layout/dlg_share.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
+    <View 
+        android:id="@+id/view_outside"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:orientation="vertical" >
 
@@ -100,4 +106,4 @@
             android:textSize="16.0sp" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
