--- a/PocketUni/res/layout/activity_tab_me.xml
+++ b/PocketUni/res/layout/activity_tab_me.xml
@@ -5,7 +5,17 @@
     android:layout_height="match_parent"
     android:background="#fcfcfc" >
 
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/weibo_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#00000000"
+        android:layout_below="@id/layout_user"
+        android:divider="@null"
+        android:orientation="vertical" />
+
     <RelativeLayout
+        android:id="@+id/layout_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/navbar"
@@ -16,20 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="136dip" />
 
-        <com.handmark.pulltorefresh.library.PullToRefreshListView
-            android:id="@+id/weibo_listview"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/index_banner"
-            android:cacheColorHint="#00000000"
-            android:divider="@null"
-            android:orientation="vertical" />
-
-        <LinearLayout
-            android:id="@+id/layout_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/weibo_listview"
             android:orientation="horizontal" >
 
             <ImageView
