PU里旅游点开为空白页面 学校里的轮播图，标题过长会出现错位

--- a/PocketUni/res/layout/widget_banner_item.xml
+++ b/PocketUni/res/layout/widget_banner_item.xml
@@ -17,6 +17,7 @@
         android:layout_alignParentBottom="true"
         android:background="#70000000"
         android:gravity="right|center_vertical"
+        android:singleLine="true"
         android:paddingRight="15dip"
         android:textColor="#fff"
         android:textSize="15sp"
