修复私信和系统消息跳转，但是私信内容点击跳转会更网页跳转冲突

--- a/PocketUni/res/layout/list_item_user_view_weibo.xml
+++ b/PocketUni/res/layout/list_item_user_view_weibo.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dip"
             android:gravity="center"
-            android:text="这家伙很懒\n还未发表过微博！" />
+            android:text="这家伙很懒\n&#160;&#160;还未发状态！" />
 
         <TextView
             android:id="@+id/text_nickname"
