--- a/PocketUni/res/layout/activity_tab_me.xml
+++ b/PocketUni/res/layout/activity_tab_me.xml
@@ -8,12 +8,13 @@
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/weibo_listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/layout_user"
+        android:layout_height="match_parent"
+
+		android:layout_below="@id/layout_user"
         android:cacheColorHint="#00000000"
         android:divider="@null"
         android:orientation="vertical" />
-
+    
     <RelativeLayout
         android:id="@+id/layout_user"
         android:layout_width="match_parent"
