--- a/PocketUni/res/layout/list_item_user_view_header.xml
+++ b/PocketUni/res/layout/list_item_user_view_header.xml
@@ -116,8 +116,9 @@
                 android:layout_toRightOf="@+id/btn_follow"
                 android:background="@drawable/btn_selector_message"
                 android:visibility="gone" />
-
-           <!--  <Button
+			
+			<!-- 原来隐藏 现在改为显示-->
+           <Button
                 android:id="@+id/btn_photo"
                 android:layout_width="98dip"
                 android:layout_height="42dip"
@@ -127,7 +128,8 @@
                 android:layout_marginBottom="4dip"
                 android:layout_marginLeft="4dip"
                 android:background="@drawable/btn_user_photo"
-                android:text="相册" /> -->
+                android:text="相册" 
+                android:visibility="gone" /> 
         </RelativeLayout>
     </LinearLayout>
 
@@ -137,12 +139,12 @@
         android:orientation="vertical" >
 
         <LinearLayout
+            android:id="@+id/my_fun_layoutss"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/user_params_bg"
             android:orientation="horizontal"
             android:padding="4dip" >
-
             <LinearLayout
                 android:id="@+id/btn_params_buluo"
                 android:layout_width="wrap_content"
